# PhaseSpaceGen

./: .gitignore  .gitmodules  CMakeLists.txt  ElasticGen.cxx  NpipGen.cxx  README.md  ThreePi.cxx  TwoPi.cxx
include/: constants.h  physics.h
src/: physics.cxx
